--- a/public/stylesheets/home1.css
+++ b/public/stylesheets/home1.css
@@ -102,7 +102,7 @@ button.btn-secondary {
     justify-content: left;
   }
   .chartBox {
-    width: auto;
+    width: 300px;
     padding: 20px;
     border-radius: 20px;
     border: solid 3px rgba(54, 162, 235, 1);
